js262/test/language/statements/with/decl-async-gen.js


/*---
esid: sec-with-statement
description: >
  AsyncGeneratorDeclaration is not allowed in statement position
info: |
  ExpressionStatement[Yield, Await] :
    [lookahead ∉ { {, function, async [no LineTerminator here] function, class, let [ }]
    Expression[+In, ?Yield, ?Await] ;
negative:
  phase: parse
  type: SyntaxError
features: [async-iteration]
flags: [noStrict]
---*/

$DONOTEVALUATE();

with ({}) async function* g() {}
